adding stage specific configuration

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,27 @@
 spring:
+  datasource:
+    url: "jdbc:derby:database;create=true;user=APP"
   pid:
     file: "observer.pid"
+  mail:
+    host: "smtp.1und1.de"
+    port: 587
+    username: ""
+    password: ""
+    properties:
+      mail:
+        smtp:
+          auth: true
+          timeout: 3000
+          connectiontimeout: 5000
+          writetimeout: 5000
+          starttls:
+            enabled: true
+org:
+  salex:
+    blog:
+      url: "https://holzwerken.salex.org/wp-json/wp/v2"
+      username: ""
+      password: ""
+    mail:
+      alert: "sascha.gaertner@salex.org"
