--- a/pom.xml
+++ b/pom.xml
@@ -92,10 +92,14 @@
             <version>${jfreechart.version}</version>
         </dependency>-->
 
-        <!--<dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+<!--        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-test</artifactId>
         </dependency>-->
     </dependencies>
 
