--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,6 +1,9 @@
 spring:
   datasource:
     url: 'jdbc:derby:database;create=true;user=APP'
+  jpa:
+    hibernate:
+      ddl-auto: update
   mail:
     host: 'smtp.1und1.de'
     port: 587
