--- a/pom.xml
+++ b/pom.xml
@@ -78,14 +78,19 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>-->
-        <!--<dependency>
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter</artifactId>
-        </dependency>-->
+        </dependency>
         <dependency>
             <groupId>org.apache.derby</groupId>
             <artifactId>derby</artifactId>
             <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.salex.hmip</groupId>
+            <artifactId>client</artifactId>
+            <version>${hmip.client.version}</version>
         </dependency>
         <!--<dependency>
             <groupId>org.jfree</groupId>
