--- a/.github/workflows/maven-ci.yml
+++ b/.github/workflows/maven-ci.yml
@@ -22,9 +22,9 @@ jobs:
 
       - name: Report
         uses: dorny/test-reporter@v1
-        if: success() || failure()
+        if: always()
         with:
-          name: Maven Tests
+          name: Test results
           path: target/surefire-reports/*.xml
           reporter: java-junit
           fail-on-error: true
