--- a/pom.xml
+++ b/pom.xml
@@ -92,11 +92,15 @@
             <artifactId>client</artifactId>
             <version>${hmip.client.version}</version>
         </dependency>
-        <!--<dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-freemarker</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.jfree</groupId>
             <artifactId>jfreechart</artifactId>
-            <version>${jfreechart.version}</version>
-        </dependency>-->
+            <version>   ${jfreechart.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
