--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
         <spring.boot.version>2.6.4</spring.boot.version>
         <spring.cloud.version>2021.0.0</spring.cloud.version>
         <jfreechart.version>1.5.3</jfreechart.version>
+        <mockwebserver.version>4.9.3</mockwebserver.version>
         <hmip.client.version>1.0.0</hmip.client.version>
         <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
         <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
@@ -110,6 +111,19 @@
         <dependency>
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>${mockwebserver.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>mockwebserver</artifactId>
+            <version>${mockwebserver.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
