--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: 'jdbc:derby:database;create=true;user=APP'
+    url: 'jdbc:derby:database;user=APP'
   jpa:
     hibernate:
       ddl-auto: update
@@ -22,7 +22,8 @@ org:
   salex:
     cron:
       measure: '0 5/10 * * * *'
-      statistics: '0 0 0 * * *'
+      statistics: '0 2/10 * * * *'
+#      statistics: '0 0 0 * * *'
     #      alert: '0 0 6 * * *'
     raspberry:
       script:
