--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -32,6 +32,7 @@ jobs:
           context: .
           push: true
           tags: ${{ github.repository }}:${{ github.event.inputs.version }}
+          labels: ${{ github.repository }}:${{ github.event.inputs.version }}
 
       - name: Create Release
         id: create_release
