--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@
 .DS_Store
 bin
 
-docker/local/grafana/*
-docker/local/influx/*
-docker/local/mosquitto/data/*
-docker/local/mosquitto/log/*
+docker/*/observer/log/*
+docker/*/grafana/*
+docker/*/influx/*
+docker/*/mosquitto/data/*
+docker/*/mosquitto/log/*
