--- a/docker/prod/docker-compose.yml
+++ b/docker/prod/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   observer:
-    image: ghcr.io/salex-org/smart-home-observer:2.0.0-beta1
+    image: ghcr.io/salex-org/smart-home-observer:0.0.0
     ports:
       - '8080:8080'
     volumes:
