--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -56,6 +56,7 @@ jobs:
           git commit -m "updating version to ${{ github.event.inputs.version }} in docker-compose"
           git tag -a v${{ github.event.inputs.version }} -m "tagging version ${{ github.event.inputs.version }}"
           git push --tags
+          mkdir bin
           tar cfvz ./bin/scripts.tar.gz docker/prod/
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -73,7 +74,7 @@ jobs:
           draft: false
           prerelease: false
 
-      - name: upload installation artifact
+      - name: Upload Scripts Asset
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ github.token }}
