--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,9 +1,8 @@
 name: Run tests
 on:
-  - push:
-      branches:
-        - '*'
-  - pull_request
+  push:
+    branches:
+      - '*'
 
 jobs:
   test:
