--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,62 +1,62 @@
-name: Publish docker image
+name: Create and package a release
 on:
-  push:
-    tags:
-      - 'v*.*.*'
-
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Version number to release'
+        required: true
 
 jobs:
-  publish:
-    name: Publish docker image
+  release:
+    name: Create and package a release
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Set up Go
-        uses: actions/setup-go@v3
+      - name: Set version in docker-compose.yml
+        uses: fjogeleit/yaml-update-action@v0.12.3
         with:
-          go-version: 1.19
+          valueFile: docker/prod/docker-compose.yml
+          propertyPath: 'services.observer.image'
+          value: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.event.inputs.version }}
+          commitChange: false
 
-      - name: Build Linux ARM v7
-        run: CGO_ENABLED=0 GOOS=linux GOARCH=arm GOARM=7 go build -a -o bin/linux/arm/v7/smart-home-observer cmd/main.go
+      - name: Create tag
+        run: |
+          git config --global user.email "buildmanager@salex.org"
+          git config --global user.name "Bob the Builder"
+          git add docker/prod/docker-compose.yml
+          git commit -m "updating version to ${{ github.event.inputs.version }} in docker-compose"
+          git tag -a v${{ github.event.inputs.version }} -m "tagging version ${{ github.event.inputs.version }}"
+          git push --tags
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build Linux ARM64
-        run: CGO_ENABLED=0 GOOS=linux GOARCH=arm64 go build -a -o bin/linux/arm64/smart-home-observer cmd/main.go
-
-      - name: Build Linux AMD64
-        run: CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -o bin/linux/amd64/smart-home-observer cmd/main.go
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-
-      - name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Log in to the Container registry
-        uses: docker/login-action@v2
+      - name: Create release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          tag_name: v${{ github.event.inputs.version }}
+          release_name: Release v${{ github.event.inputs.version }}
+          body: |
+            Release v${{ github.event.inputs.version }}
+          draft: false
+          prerelease: false
 
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          tags: type=semver,pattern={{version}}
+      - name: Package scripts
+        run: |
+          mkdir bin
+          tar cfvz ./bin/scripts.tar.gz -C docker/prod .
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v3
+      - name: Upload scripts asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
         with:
-          file: ./Dockerfile
-          context: .
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          platforms: linux/arm/v7,linux/arm64,linux/amd64
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./bin/scripts.tar.gz
+          asset_name: scripts.tar.gz
+          asset_content_type: application/gzip
