--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,11 +17,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-        with:
-          persist-credentials: false
-          # Use PERSONAL_ACCESS_TOKE (with write permission) instead of GITHUB_TOKEN to trigger
-          # other worflows reafcting on events !!!
-          # See: https://github.com/orgs/community/discussions/26220 for details
 
       - name: Set version in docker-compose.yml
         uses: fjogeleit/yaml-update-action@v0.12.3
@@ -31,25 +26,27 @@ jobs:
           value: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.event.inputs.version }}
           commitChange: false
 
+        # Use PERSONAL_ACCESS_TOKEN (with write permission) instead of GITHUB_TOKEN to trigger
+        # other worflows reafcting on events !!!
+        # See: https://github.com/orgs/community/discussions/26220 for details
       - name: Create tag
+        uses: oleksiyrudenko/gha-git-credentials@v2.1.1
+        with:
+          name: 'Bob the Builde'
+          email: 'buildmanager@salex.org'
+          actor: ${{ secrets.PERSONAL_ACCESS_USER }}
+          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
         run: |
-          git config --global user.email "buildmanager@salex.org"
-          git config --global user.name "Bob the Builder"
           git add docker/prod/docker-compose.yml
           git commit -m "updating version to ${{ github.event.inputs.version }} in docker-compose"
           git tag -a v${{ github.event.inputs.version }} -m "tagging version ${{ github.event.inputs.version }}"
           git push --tags
-        env:
-          GITHUB_USER: ${{ secrets.PERSONAL_ACCESS_USER }}
-          GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-
 
       - name: Create release
         id: create_release
         uses: actions/create-release@v1
         env:
-          GITHUB_USER: ${{ secrets.PERSONAL_ACCESS_USER }}
-          GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: v${{ github.event.inputs.version }}
           release_name: Release v${{ github.event.inputs.version }}
