--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,4 +1,4 @@
-name: Create release
+name: Create and publish release
 on:
   workflow_dispatch:
     inputs:
@@ -18,18 +18,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-        # Use PERSONAL_ACCESS_TOKEN (with write permission) instead of GITHUB_TOKEN to trigger
-        # other worflows reafcting on events !!!
-        # See: https://github.com/orgs/community/discussions/26220 for details
-      - name: Set GIT credentials
-        uses: oleksiyrudenko/gha-git-credentials@v2.1.1
-        with:
-          global: true
-          name: 'Bob the Builde'
-          email: 'buildmanager@salex.org'
-          actor: ${{ secrets.PERSONAL_ACCESS_USER }}
-          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-
       - name: Set version in docker-compose.yml
         uses: fjogeleit/yaml-update-action@v0.12.3
         with:
@@ -40,9 +28,10 @@ jobs:
 
       - name: Create tag
         env:
-          GITHUB_USER: ${{ secrets.PERSONAL_ACCESS_USER }}
-          GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          git config --global user.email "buildmanager@salex.org"
+          git config --global user.name "Bob the Builder"
           git add docker/prod/docker-compose.yml
           git commit -m "updating version to ${{ github.event.inputs.version }} in docker-compose"
           git tag -a v${{ github.event.inputs.version }} -m "tagging version ${{ github.event.inputs.version }}"
@@ -60,6 +49,61 @@ jobs:
             Release v${{ github.event.inputs.version }}
           draft: false
           prerelease: false
+
+  publish:
+    needs: release
+    name: Publish docker image and scripts
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          ref: refs/tags/v${{ github.event.inputs.version }}
+
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.19
+
+      - name: Build Linux ARM v7
+        run: CGO_ENABLED=0 GOOS=linux GOARCH=arm GOARM=7 go build -a -o bin/linux/arm/v7/smart-home-observer cmd/main.go
+
+      - name: Build Linux ARM64
+        run: CGO_ENABLED=0 GOOS=linux GOARCH=arm64 go build -a -o bin/linux/arm64/smart-home-observer cmd/main.go
+
+      - name: Build Linux AMD64
+        run: CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -o bin/linux/amd64/smart-home-observer cmd/main.go
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Log in to the Container registry
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: type=semver,pattern={{version}},value=v${{ github.event.inputs.version }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          platforms: linux/arm/v7,linux/arm64,linux/amd64
 
       - name: Package scripts
         run: |
