--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -106,9 +106,7 @@ jobs:
           platforms: linux/arm/v7,linux/arm64,linux/amd64
 
       - name: Package scripts
-        run: |
-          mkdir bin
-          tar cfvz ./bin/scripts.tar.gz -C docker/prod .
+        run: tar cfvz ./bin/scripts.tar.gz -C docker/prod .
 
       - name: Upload scripts asset
         uses: actions/upload-release-asset@v1
