--- a/docker/local/docker-compose.yml
+++ b/docker/local/docker-compose.yml
@@ -1,19 +1,18 @@
 version: '3'
 
+networks:
+  smart-home-observer:
+
 services:
-  influx:
-    image: influxdb:2.5.1
+  observer:
+    image: smart-home-observer:0.0.0
+    # Detach from container with "CTRL-p CTRL-q" when startet with "-i -t" without stopping the container
+    stdin_open: true    # docker run -i
+    tty: true           # docker run -t
     ports:
-      - '8086:8086'
-    volumes:
-      - ./influx/data:/var/lib/influxdb2
-      - ./influx/config:/etc/influxdb2
-    environment:
-      - DOCKER_INFLUXDB_INIT_MODE=setup
-      - DOCKER_INFLUXDB_INIT_USERNAME=local
-      - DOCKER_INFLUXDB_INIT_PASSWORD=localsecret
-      - DOCKER_INFLUXDB_INIT_ORG=test-local
-      - DOCKER_INFLUXDB_INIT_BUCKET=sho
+      - '8081:8080'
+    networks:
+      - smart-home-observer
 
   mosquitto:
     image: eclipse-mosquitto:2.0.15
@@ -24,14 +23,35 @@ services:
       - ./mosquitto/data:/mosquitto/data
       - ./mosquitto/config:/mosquitto/config
       - ./mosquitto/log:/mosquitto/log
+    networks:
+      - smart-home-observer
 
-  grafana:
-    image: grafana/grafana-oss:9.3.1
-    ports:
-      - '3000:3000'
-    user: '472'
-    volumes:
-      - ./grafana/data:/var/lib/grafana
-    environment:
-      - GF_SECURITY_ADMIN_USER=local
-      - GF_SECURITY_ADMIN_PASSWORD=localsecret
+#  influx:
+#    image: influxdb:2.5.1
+#    ports:
+#      - '8086:8086'
+#    volumes:
+#      - ./influx/data:/var/lib/influxdb2
+#      - ./influx/config:/etc/influxdb2
+#    environment:
+#      - DOCKER_INFLUXDB_INIT_MODE=setup
+#      - DOCKER_INFLUXDB_INIT_USERNAME=local
+#      - DOCKER_INFLUXDB_INIT_PASSWORD=localsecret
+#      - DOCKER_INFLUXDB_INIT_ORG=test-local
+#      - DOCKER_INFLUXDB_INIT_BUCKET=sho
+#    networks:
+#      - smart-home-observer
+
+#  grafana:
+#    image: grafana/grafana-oss:9.3.1
+#    ports:
+#      - '3000:3000'
+#    user: '472'
+#    volumes:
+#      - ./grafana/data:/var/lib/grafana
+#    environment:
+#      - GF_SECURITY_ADMIN_USER=local
+#      - GF_SECURITY_ADMIN_PASSWORD=localsecret
+#    networks:
+#      - smart-home-observer
+
