adding mount for observer config

--- a/docker/local/observer/config/observer-config.yml
+++ b/docker/local/observer/config/observer-config.yml
@@ -2,6 +2,6 @@ database:
   username: secret-db-user
   password: secret-db-password
 mqtt-broker:
-  hostname: mqtt-hotname
+  hostname: mqtt-hostname
   username: secret-mqtt-user
   password: secret-mqtt-password
