--- a/docker/local/docker-compose.yml
+++ b/docker/local/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       - '8081:8080'
     networks:
       - smart-home-observer
+    volumes:
+      - ./observer/config:/config
 
   mosquitto:
     image: eclipse-mosquitto:2.0.15
