--- a/docker/prod/docker-compose.yml
+++ b/docker/prod/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - '8081:8080'
     networks:
       - smart-home-observer
+    volumes:
+      - ./observer/config:/config
 
 #  influx:
 #    image: influxdb:2.5.1
