--- a/docker/prod/docker-compose.yml
+++ b/docker/prod/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3'
 services:
   observer:
     image: ghcr.io/salex-org/smart-home-observer:0.0.0
+    user: 'observer:smart-home'
     # Detach from container with "CTRL-p CTRL-q" when startet with "-i -t" without stopping the container
     stdin_open: true    # docker run -i
     tty: true           # docker run -t
@@ -13,24 +14,20 @@ services:
     volumes:
       - ./observer/config:/config
 
-#  influx:
-#    image: influxdb:2.5.1
-#    ports:
-#      - '8086:8086'
-#    volumes:
-#      - ./influx/data:/var/lib/influxdb2
-#      - ./influx/config:/etc/influxdb2
-#    environment:
-#      - DOCKER_INFLUXDB_INIT_MODE=setup
-#      - DOCKER_INFLUXDB_INIT_USERNAME=local
-#      - DOCKER_INFLUXDB_INIT_PASSWORD=localsecret
-#      - DOCKER_INFLUXDB_INIT_ORG=test-local
-#      - DOCKER_INFLUXDB_INIT_BUCKET=sho
-#    networks:
-#      - smart-home-observer
+  influx:
+    image: influxdb:2.5.1
+    user: 'influx:smart-home'
+    ports:
+      - '8086:8086'
+    volumes:
+      - ./influx/data:/var/lib/influxdb2
+      - ./influx/config:/etc/influxdb2
+    networks:
+      - smart-home-observer
 
   mosquitto:
     image: eclipse-mosquitto:2.0.15
+    user: 'mosquitto:smart-home'
     ports:
       - '1883:1883'
       - '9001:9001'
@@ -41,18 +38,15 @@ services:
     networks:
       - smart-home-observer
 
-#  grafana:
-#    image: grafana/grafana-oss:9.3.1
-#    ports:
-#      - '3000:3000'
-#    user: '472'
-#    volumes:
-#      - ./grafana/data:/var/lib/grafana
-#    environment:
-#      - GF_SECURITY_ADMIN_USER=local
-#      - GF_SECURITY_ADMIN_PASSWORD=localsecret
-#    networks:
-#      - smart-home-observer
+  grafana:
+    image: grafana/grafana-oss:9.3.1
+    user: 'grafana:smart-home'
+    ports:
+      - '3000:3000'
+    volumes:
+      - ./grafana/data:/var/lib/grafana
+    networks:
+      - smart-home-observer
 
 networks:
   smart-home-observer:
