use UID and GID for running the containers with docker compose

--- a/docker/prod/docker-compose.yml
+++ b/docker/prod/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   observer:
     image: ghcr.io/salex-org/smart-home-observer:0.0.0
-    user: 'observer:smart-home'
+    user: ${SMART_HOME_USER_OBSERVER}
     # Detach from container with "CTRL-p CTRL-q" when startet with "-i -t" without stopping the container
     stdin_open: true    # docker run -i
     tty: true           # docker run -t
@@ -16,7 +16,7 @@ services:
 
   influx:
     image: influxdb:2.5.1
-    user: 'influx:smart-home'
+    user: ${SMART_HOME_USER_INFLUX}
     ports:
       - '8086:8086'
     volumes:
@@ -27,7 +27,7 @@ services:
 
   mosquitto:
     image: eclipse-mosquitto:2.0.15
-    user: 'mosquitto:smart-home'
+    user: ${SMART_HOME_USER_MOSQUITTO}
     ports:
       - '1883:1883'
       - '9001:9001'
@@ -40,7 +40,7 @@ services:
 
   grafana:
     image: grafana/grafana-oss:9.3.1
-    user: 'grafana:smart-home'
+    user: ${SMART_HOME_USER_GRAFANA}
     ports:
       - '3000:3000'
     volumes:
