optimizing user handling again

--- a/docker/prod/docker-compose.yml
+++ b/docker/prod/docker-compose.yml
@@ -4,7 +4,8 @@ services:
   observer:
     container_name: smart-home-observer
     image: ghcr.io/salex-org/smart-home-observer:0.0.0
-    user: ${SMART_HOME_USER}
+    # Run the container with the user running docker compose
+    user: ${UID}:${GID}
     # Detach from container with "CTRL-p CTRL-q" when startet with "-i -t" without stopping the container
     stdin_open: true    # docker run -i
     tty: true           # docker run -t
@@ -18,7 +19,8 @@ services:
   influx:
     container_name: smart-home-influx
     image: influxdb:2.5.1
-    user: ${SMART_HOME_USER}
+    # Run the container with the user running docker compose
+    user: ${UID}:${GID}
     ports:
       - '8086:8086'
     volumes:
@@ -30,7 +32,8 @@ services:
   mosquitto:
     container_name: smart-home-mosquitto
     image: eclipse-mosquitto:2.0.15
-    user: ${SMART_HOME_USER}
+    # Run the container with the user running docker compose
+    user: ${UID}:${GID}
     ports:
       - '1883:1883'
       - '9001:9001'
@@ -44,7 +47,8 @@ services:
   grafana:
     container_name: smart-home-grafana
     image: grafana/grafana-oss:9.3.1
-    user: ${SMART_HOME_USER}
+    # Run the container with the user running docker compose
+    user: ${UID}:${GID}
     ports:
       - '3000:3000'
     volumes:
