optimizing user handling again

--- a/docker/prod/docker-compose.yml
+++ b/docker/prod/docker-compose.yml
@@ -4,8 +4,7 @@ services:
   observer:
     container_name: smart-home-observer
     image: ghcr.io/salex-org/smart-home-observer:0.0.0
-    # Run the container with the user running docker compose
-    user: '${UID}:${GID}'
+    user: ${SMART_HOME_USER}
     # Detach from container with "CTRL-p CTRL-q" when startet with "-i -t" without stopping the container
     stdin_open: true    # docker run -i
     tty: true           # docker run -t
@@ -19,8 +18,7 @@ services:
   influx:
     container_name: smart-home-influx
     image: influxdb:2.5.1
-    # Run the container with the user running docker compose
-    user: '${UID}:${GID}'
+    user: ${SMART_HOME_USER}
     ports:
       - '8086:8086'
     volumes:
@@ -33,7 +31,7 @@ services:
     container_name: smart-home-mosquitto
     image: eclipse-mosquitto:2.0.15
     # Run the container with the user running docker compose
-    user: '${UID}:${GID}'
+    user: ${SMART_HOME_USER}
     ports:
       - '1883:1883'
       - '9001:9001'
@@ -48,7 +46,7 @@ services:
     container_name: smart-home-grafana
     image: grafana/grafana-oss:9.3.1
     # Run the container with the user running docker compose
-    user: '${UID}:${GID}'
+    user: ${SMART_HOME_USER}
     ports:
       - '3000:3000'
     volumes:
