--- a/docker/observer/config/observer-config.yml
+++ b/docker/observer/config/observer-config.yml
@@ -1,6 +1,6 @@
 database:
   url: smart-home-influx:8086
-  token: localsecret
+  token: localadmintoken
 mqtt-broker:
   url: smart-home-mosquitto:1883
   username: local
